[workspace]
members = [
    "client",
    "server",
    "common"
]

[workspace.dependencies]
anyhow = "1.0.69"
futures = "0.3.27"
moka = { version = "0.10.0", features = ["future"] }
tokio = { version = "1.26.0", features = ["full"] }
tub = "0.3.5"
serde = { version = "1.0.156", features = ["derive"] }
bincode = "1.3.3"
dashmap = "5.4.0"