[workspace]
members = [
    "client",
    "server",
    "common"
]

[workspace.dependencies]
tokio-utils = "0.1.1"
anyhow = "1.0.69"
futures = "0.3.27"
clap = { version = "4.1.6", features = ["derive"] }
moka = { version = "0.10.0", features = ["future"] }
tokio = { version = "1.26.0", features = ["full"] }
serde = { version = "1.0.156", features = ["derive"] }
bincode = "1.3.3"
dashmap = "5.4.0"
sockit = "0.2.0"