[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
common = { path = "../common" }
anyhow.workspace = true
clap.workspace = true
futures.workspace = true
moka.workspace = true
tokio.workspace = true
tub.workspace = true
serde.workspace = true
bincode.workspace = true
dashmap.workspace = true
shutdown-async.workspace = true
async-throttle.workspace = true
sockit.workspace = true