[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
common = { path = "../common" }
tokio-utils.workspace = true
anyhow.workspace = true
clap.workspace = true
futures.workspace = true
moka.workspace = true
tokio.workspace = true
serde.workspace = true
bincode.workspace = true
dashmap.workspace = true
sockit.workspace = true